# multi_jupyter

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
jupyter_config/: tracker.jupyterlab-settings
postgres/: Dockerfile  docker_init_db.sh
