[tool.poetry]
name = "jupyter-server"
version = "0.1.0"
description = "Just Doc It"
authors = ["Konstantin Smolyanin <ksmolyanin@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "2.27.1"
aiohttp = "3.8.1"
aiofiles = "0.8.0"
multipledispatch = "0.6.0"
numpy = "1.23.0"
pandas = "1.4.3"
psycopg2 = "2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
